// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Server;

#nullable disable

namespace Server.Migrations
{
    [DbContext(typeof(MultiFlapDbContext))]
    [Migration("20230610140618_UpdateAchievement")]
    partial class UpdateAchievement
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "7.0.5")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Server.Models.Achievement", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("Achievements");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Description = "yes",
                            Name = "High Scorer",
                            UserId = 1
                        },
                        new
                        {
                            Id = 2,
                            Description = "no",
                            Name = "Speed Runner",
                            UserId = 2
                        });
                });

            modelBuilder.Entity("Server.Models.LeaderboardEntry", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("DateAchieved")
                        .HasColumnType("datetime2");

                    b.Property<int>("Score")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("LeaderboardEntries");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8568),
                            Score = 100,
                            UserId = 1
                        },
                        new
                        {
                            Id = 2,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8663),
                            Score = 200,
                            UserId = 2
                        },
                        new
                        {
                            Id = 3,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8670),
                            Score = 150,
                            UserId = 1
                        },
                        new
                        {
                            Id = 4,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8676),
                            Score = 180,
                            UserId = 2
                        },
                        new
                        {
                            Id = 5,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8684),
                            Score = 220,
                            UserId = 1
                        },
                        new
                        {
                            Id = 6,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8691),
                            Score = 300,
                            UserId = 2
                        },
                        new
                        {
                            Id = 7,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8696),
                            Score = 250,
                            UserId = 1
                        },
                        new
                        {
                            Id = 8,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8703),
                            Score = 190,
                            UserId = 2
                        },
                        new
                        {
                            Id = 9,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8711),
                            Score = 280,
                            UserId = 1
                        },
                        new
                        {
                            Id = 10,
                            DateAchieved = new DateTime(2023, 6, 10, 16, 6, 18, 12, DateTimeKind.Local).AddTicks(8716),
                            Score = 230,
                            UserId = 2
                        });
                });

            modelBuilder.Entity("Server.Models.PowerUpItem", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Quantity")
                        .HasColumnType("int");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.ToTable("PowerUpItems");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Name = "Extra Life",
                            Quantity = 5,
                            UserId = 1
                        },
                        new
                        {
                            Id = 2,
                            Name = "Super Boost",
                            Quantity = 3,
                            UserId = 2
                        });
                });

            modelBuilder.Entity("Server.Models.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Auth0Identifier")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Users");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Email = "admin1@example.com"
                        },
                        new
                        {
                            Id = 2,
                            Email = "admin2@example.com"
                        });
                });

            modelBuilder.Entity("Server.Models.UserSettings", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("DisplayName")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Language")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<bool>("ReceiveNotifications")
                        .HasColumnType("bit");

                    b.Property<bool>("ShakeEnabled")
                        .HasColumnType("bit");

                    b.Property<bool>("SoundEnabled")
                        .HasColumnType("bit");

                    b.Property<int>("UserId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("UserId")
                        .IsUnique();

                    b.ToTable("UserSettings");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DisplayName = "Admin1",
                            Language = "English",
                            ReceiveNotifications = true,
                            ShakeEnabled = false,
                            SoundEnabled = false,
                            UserId = 1
                        },
                        new
                        {
                            Id = 2,
                            DisplayName = "Admin2",
                            Language = "French",
                            ReceiveNotifications = false,
                            ShakeEnabled = false,
                            SoundEnabled = true,
                            UserId = 2
                        });
                });

            modelBuilder.Entity("Server.Models.Achievement", b =>
                {
                    b.HasOne("Server.Models.User", "User")
                        .WithMany("Achievements")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Server.Models.LeaderboardEntry", b =>
                {
                    b.HasOne("Server.Models.User", "User")
                        .WithMany("LeaderboardEntries")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Server.Models.PowerUpItem", b =>
                {
                    b.HasOne("Server.Models.User", "User")
                        .WithMany("PowerUpItems")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Server.Models.UserSettings", b =>
                {
                    b.HasOne("Server.Models.User", "User")
                        .WithOne("UserSettings")
                        .HasForeignKey("Server.Models.UserSettings", "UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("Server.Models.User", b =>
                {
                    b.Navigation("Achievements");

                    b.Navigation("LeaderboardEntries");

                    b.Navigation("PowerUpItems");

                    b.Navigation("UserSettings")
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
